--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ MarkupSafe==0.23
 matplotlib==1.5.1
 numpy==1.11.1
 oauthlib==1.1.2
+Pillow==3.3.0
 pycparser==2.14
 pyparsing==2.1.5
 python-dateutil==2.5.3
